# Top-1500-Empresas---Estad-o

./: README.md  pyproject.toml
top1500companies_scraping/: main.py
top1500companies_scraping/data/: Empresas Mais 2023.html  ranking_1500_empresas.xlsx
top1500companies_scraping/data/Empresas Mais 2023_files/: css2  f.txt  gtm(1).js.download  gtm.js.download  index-4a8e0cb3.css  js  js(1)  main-4cd13941.js.download
